<resources>
    <string name="app_name">ABNAmroAssessment</string>
    <string name="txt_title">Title</string>
    <string name="txt_empty_venue_message">Sorry! No items</string>
    <string name="txt_empty_data">Sorry! Data not available</string>
    <string name="txt_description">Description</string>
    <string name="txt_contact_information">Contact Information</string>
    <string name="txt_address">Address</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_twitter">Twitter</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_instagram">Instagram</string>
    <string name="txt_Search">Search</string>
</resources>